<resources>
    <string name="app_name">KrishiG</string>
    <string name="phone_number_or_email_message_one">Please enter Phone number or Email</string>
    <string name="password_message_one">Please enter password</string>
    <string name="password_message_two">Password length should not be less than 8 characters</string>
    <string name="password_message_three">Password length should not be greater than 20 characters</string>
    <string name="password_message_four">Password must contain 1 or more Capital letter</string>
    <string name="password_message_five">Password must contain 1 or more Small letter</string>
    <string name="password_message_six">Password must contain 1 or more digit characters</string>
    <string name="password_message_seven">Password must contain 1 or more special characters</string>
    <string name="password_message_eight">white spaces don’t allowed</string>
    <string name="confirm_password_message_one">Please enter confirm password</string>
    <string name="confirm_password_message_two">Confirm password length should not be less than 8 characters</string>
    <string name="confirm_password_message_three">Password and Confirm password not match</string>
    <string name="empty_error">This field can\'t be empty.!</string>
    <string name="invalid_email">Invalid Email Id</string>
    <string name="enter_ten_digits_number">Enter 10 digits Mobile Number</string>
    <string name="valid_number">Enter Valid Mobile Number.</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="exit_msg">Are you sure you want to exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password_not_match">Password and Confirm Password does not match.</string>
    <string name="alert">Alert!!</string>
    <string name="aadhaar_valid">Please enter valid Aadhaar number!!</string>
    <string name="pan_card_valid">Please enter valid PAN number!!</string>
    <string name="ifsc_valid">Please enter valid IFSC!!</string>
    <string name="account_valid">Please enter valid Account Number!!</string>
    <string name="enable_permission">Enable permission Manually</string>
    <string name="amount_valid">amount value</string>
    <string name="email_message_one">"Enter Email "</string>
    <string name="email_message_two">Please Enter valid email</string>
    <string name="email_password_one">"Enter Password "</string>
    <string name="enter_your_email_address_format">Enter Your Email Address In Right Format</string>
    <string name="enter_your_password_format">Enter Your Password In Right Format</string>
    <string name="register_step_two_label_did_not_get_the_code">Didn’t get the code?</string>
    <string name="register_step_two_label_resend_code_in">Resend code in</string>
    <string name="register_step_two_link_resend_code">Resend Code</string>
    <string name="Enter_valid_email">"Enter Valid Email"</string>
    <string name="phone_number_message_one">Please enter your phone number</string>
    <string name="phone_number_message_two">Please enter valid phone number</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="something_went_wrong_please_try_again">Something went wrong please try again</string>
    <string name="please_wait">Please Wait</string>
    <string name="your_account_is_currently_not_active">Your account is currently not active</string>
    <string name="claim">Claim</string>
    <string name="logout">Logout</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="referral_optional">Referral (optional*)</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="needs_permission">Needs Pemission</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="invoice_no_message_one">Please enter invoice number</string>
    <string name="thanks_you_for_taking_time_to_give_us_your_feedback_filling_up_this_short_feedback_form_below_we_highly_value_your_opinions">Thanks you for taking time to give us your feedback filling up this short feedback form below we highly value your opinions</string>
    <string name="customer_name_message_one">Please enter customer name</string>
    <string name="installer_name_message_one">Please enter installer name</string>
    <string name="installation_detail_update">Installation Detail Update</string>
    <string name="enter_your_email_password">Enter your emails and password</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="ic_back">ic_back</string>
    <string name="hello">Hello</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_otp_sent_to_your_number">Enter OTP Sent to Your Number</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="nav_header_subtitle">0987654321</string>
    <string name="nav_header_title">Adwerd Shwn</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Profile</string>
    <string name="menu_slideshow">Add Funds</string>
    <string name="menu_slideshows">Bid History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="withdraw_funds">Withdraw Funds</string>
    <string name="withdraw_fundss">Win History</string>
    <string name="manage_paytm_details">Manage Paytm Details</string>
    <string name="manage_gpay_details">Manage GPay Details</string>
    <string name="manage_phonepe_details">Manage PhonePay Details</string>
    <string name="market_rates">Market Rates</string>
    <string name="help_and_guide">Help and Guide</string>
    <string name="share_our_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="name">Name</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_confirm_new_password">Enter Confirm New Password</string>
    <string name="enter_current_password">Enter current Password</string>
    <string name="enter_points_to_withdraw">Enter Points to Withdraw</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="sridevi_night">SRIDEVI NIGHT</string>
    <string name="date">Date</string>
    <string name="choose_session">Choose Session</string>
    <string name="submit">Submit</string>
    <string name="add_balance">Add Balance</string>
    <string name="login_register_error_phone_number_one">Please Enter your phone number</string>
    <string name="login_register_error_phone_number_two">Please Enter valid phone number</string>
    <string name="login_error_password_message_one">Please Enter password</string>
    <string name="login_error_password_message_two">Password length should not be less than 8 characters</string>
    <string name="login_error_password_message_three">Password length should not be greater than 20 characters</string>
    <string name="login_error_password_message_four">Password must contain 1 or more Capital letter</string>
    <string name="login_error_password_message_five">Password must contain 1 or more Small letter</string>
    <string name="login_error_password_message_six">Password must contain 1 or more digit characters</string>
    <string name="login_error_password_message_seven">Password must contain 1 or more special characters</string>
    <string name="login_error_password_message_eight">white spaces don’t allowed</string>
    <string name="change_password">Change Password</string>
    <string name="default_notification_channel_id">satta_king_channel_id</string>
    <string name="default_notification_channel_name">find_my_cylinder_channel_name</string>
    <string name="whatsapp_have_not_been_installed">WhatsApp is not been Insatalled</string>
    <string name="select">Select</string>
    <string name="ank">Ank</string>
    <string name="bid_amount">Bid Amount</string>
    <string name="enter_bid_amount">Enter Bid Amount</string>
    <string name="total_point">Total Point :</string>
    <string name="email">Email</string>
    <string name="image">Images</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="house_number">House Number</string>
    <string name="landmark">LandMark</string>
    <string name="pin_code">PinCode</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="we_need_to_verify_you_we_will_send_you_a_one_time_verification_code">We need to verify you. We will send you a one time verification code.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="next">Next</string>
    <string name="resend">Resend a new code</string>
    <string name="verify_otp_label_resend_code_in">Did’nt receive the code ?</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="code">Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="hi">Hi</string>
    <string name="amelia_barlow">Amelia Barlow</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total_sales">Total Sales</string>
    <string name="order_id">Order ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="product">Products</string>
    <string name="quantity">Quantity</string>
    <string name="total_amount">Total Amount</string>
    <string name="view_detail">View Detail</string>
    <string name="view_details">View Details</string>
    <string name="manage_sub_category">Manage Sub Category</string>
    <string name="home_hint_search_for_services">Search Sub Category</string>
    <string name="home_hint_search_for_category">Search Category</string>
    <string name="home_hint_search_for_brands">Search Brands</string>
    <string name="s_no">S.No.</string>
    <string name="sub_category">Sub Category</string>
    <string name="category">Category</string>
    <string name="action">Action</string>
    <string name="upload_document">upload</string>
    <string name="title_activity_add_sub_category">AddSubCategoryActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="no_data_found">No Data Found</string>
    <string name="profile">Profile</string>
    <string name="your_order_has_been_accepted">Your Order has been Accepted</string>
    <string name="your_items_has_been_placcd_and_is_on_it_s_way_to_being_processed">Your items has been placed and is on it’s way to being processed</string>
    <string name="track_order">Track Order</string>
    <string name="back_to_home">Back To Home</string>
    <string name="oops_order_failed">Oops! Order Failed</string>
    <string name="something_went_tembly_wrong">Something went tembly wrong.</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="you_will_get_a_response_within_a_few_minutes">You will get a response within a few minutes.</string>
    <string name="done">Done</string>
    <string name="orders">Orders</string>
</resources>