<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/navigation_home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_profile"
        android:checked="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />


    <item
        android:id="@+id/nav_manage_orders"
        android:checked="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/orders" />

    <item
        android:id="@+id/navigation_manage_product"
        android:checked="true"
        android:icon="@drawable/ic_document"
        android:title="@string/product" />
</menu>