<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:src="@drawable/ic_back" />


    <ImageView
        android:id="@+id/orderImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_210sdp"
        android:layout_margin="@dimen/_12sdp"
        android:contentDescription="@string/image"
        android:src="@drawable/image_product" />



    <TextView
        android:id="@+id/paymentMethodTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:letterSpacing="0"
        android:text="@string/oops_order_failed"
        android:textAppearance="@style/BoldFont24"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/paymentMethodTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:letterSpacing="0"
        android:text="@string/something_went_tembly_wrong"
        android:textAppearance="@style/MediumFont16"
        android:textColor="@color/login_grey" />


    <Button
        android:id="@+id/loginButton"
        style="@style/UnElevatedFilledButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/please_try_again"
        android:textAppearance="@style/MediumFont18" />


</LinearLayout>