<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.seeAllProduct.SeeAllProductActivity">


    <ImageView
        android:id="@+id/icBackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/subCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_toEndOf="@+id/icBackImageView"
        android:letterSpacing="0"
        android:text="@string/product"
        android:textAppearance="@style/BoldFont16"
        android:textColor="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icBackImageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seedsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp" />

            <!--we are adding progress bar
              for the purpose of loading-->
            <ProgressBar
                android:id="@+id/idPBLoading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/errorImageViewSeeds"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/error_image"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorTextViewSeeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/errorImageViewSeeds"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:text="@string/no_data_found"
        android:textAppearance="@style/BoldFont12"
        android:visibility="gone" />

    <include
        android:id="@+id/progressDialog"
        layout="@layout/please_wait_progress_bar" />
</RelativeLayout>