<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragments.home.SubProductDetail.view.SubCategoryAndProductActivity">

    <ImageView
        android:id="@+id/icBackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/subCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_toEndOf="@+id/icBackImageView"
        android:letterSpacing="0"
        android:text="@string/sub_category"
        android:textAppearance="@style/BoldFont16"
        android:textColor="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icBackImageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seedsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@color/white"
                android:overScrollMode="never" />

            <ProgressBar
                android:id="@+id/idPBLoading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <ImageView
        android:id="@+id/errorImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/error_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/errorImageView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:text="@string/no_data_found"
        android:textAppearance="@style/BoldFont12"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorImageView" />

    <include
        android:id="@+id/progressDialog"
        layout="@layout/please_wait_progress_bar" />
</RelativeLayout>