<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentFirst"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayoutSubCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:id="@+id/subCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0"
            android:text="@string/sub_category"
            android:textAppearance="@style/BoldFont18"
            android:textColor="@color/black" />


        <ImageView
            android:id="@+id/subCategoryImageView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:src="@drawable/fire"
            android:visibility="gone" />

        <TextView
            android:id="@+id/seeAllSubCategoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:letterSpacing="0"
            android:text="See All"
            android:textAppearance="@style/MediumFont14"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/subCategoryLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutSubCategory"
        android:layout_marginStart="@dimen/_7sdp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerView"
            android:layout_width="match_parent"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/errorImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_error"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/no_data_found"
            android:textAppearance="@style/BoldFont12"
            android:visibility="gone" />

    </LinearLayout>

    <include
        android:id="@+id/progressDialog"
        layout="@layout/please_wait_progress_bar" />
</RelativeLayout>
